# INT

./: .gitignore  Cargo.toml  README.md  STRATEGY.md  eval_output.txt  patch_compare_classes.py  patch_compare_emb.py  patch_compare_py.py  patch_compare_rust.py  patch_compare_weights.py  patch_export.py  patch_gpt.py  patch_gpt_eprintln.py  patch_gpt_std.py  patch_loader.py  patch_quantize.py  patch_train.py  patch_train2.py
.github/workflows/: determinism.yml
examples/: compare_rust.rs  debug_attention.rs  debug_layer.rs  eval_100.rs  tiny_transformer.rs
scripts/: compare_layer_by_layer.py  count_top3_hits.py  debug_layer_pytorch.py  eval_kl.py  export_logits_128.py  export_mnist_bin.py  export_transformer_bin.py  generate_pytorch.py  prepare_text.py  quantize_mnist.py  quantize_transformer.py  requirements.txt  test_float_acc.py  test_pytorch_only.py  train_mnist.py  train_tiny_transformer.py  train_tiny_transformer_qat.py
src/: lib.rs  matrix.rs  wasm_api.rs
src/examples/: mnist.rs  mod.rs  tiny_transformer.rs
src/kernel/: accum.rs  dyn_wide.rs  mod.rs  static_wide.rs
src/model/: format.rs  loader.rs  mod.rs  tensor.rs
src/nn/: attention.rs  embedding.rs  gpt.rs  linear.rs  mod.rs  pipeline.rs  rmsnorm.rs  softmax.rs  transformer.rs
src/quant/: clip.rs  mod.rs  qtensor.rs  requant.rs  scale.rs
src/runtime/: decode.rs  generator.rs  kv_cache.rs  metrics.rs  mod.rs  profiler.rs  sampler.rs
src/testing/: determinism.rs  equivalence.rs  fuzz.rs  mod.rs  overflow.rs  parity.rs  stress.rs
tests/: determinism_golden.rs
www/: index.html
(+6 files in other folders)
